# crystal_sim

./: Cargo.toml  README.md  architecture.md  crystal_sim_roadmap.md  project_overview.md  project_structure.md
config/: chain.json  checkerboard.json  chess_grid.json  chevron.json  debug.json  honeycomb.json  rippled.json  spiral_chain.json  staggered.json  test_double_bond.json  testing_mode_demo.json  triangle.json  triangle_bi.json  triangle_bi_preset.json
docs/: current_physics.md  editor.html  index.html
docs/css/: editor.css  styles.css
docs/js/: controls.js  main.js  renderer.js  simulation.js
docs/js/editor/: drag.js  export.js  main.js  panel1.js  panel2.js  panel3.js  renderer2d.js  state.js
src/: candidates.rs  config.rs  editor_sim.rs  forces.rs  kmc.rs  lib.rs  main.rs  math_utils.rs  particle.rs  rates.rs  rng.rs  spatial.rs
tests/: physics_functions.rs
