[package]
name = "crystal_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "crystal_sim_gui"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
glam = { version = "0.29", features = ["libm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11"] }

[profile.release]
opt-level = 3
lto = true
